2006-12-06  Aaron Stone  <aaron@serendipity.cx>

	* imapcommands.c:
	Fixed incorrect strlen in _ic_list (closes bug #467).
	* misc.c:
	Added # sign to AcceptedMailboxnameChars (bug #467).

2006-12-04  Paul J Stevens <paul@nfg.nl>

	* sql/mysql/create_tables.mysql, sql/mysql/migrate_from_2.0_to_2.2.mysql, 
	  sql/postgresql/create_tables.pgsql, 
	  sql/postgresql/migrate_from_2.0_to_2.2.pgsql, 
	  sql/sqlite/create_tables.sqlite:
	adding useful indexes to headername/headervalue tables
	* db.c:
	fix fallout from #457

2006-11-27  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_db.c, check_dbmail_message.c, db.c, dbmail-imapsession.c, 
	  dbmail-message.c, modules/dbpgsql.c:
	remove the query global
	* db.c:
	fix bug #457
	* debian/compat, debian/control, debian/dbmail-ldap.postinst, 
	  debian/dbmail-mysql.postinst, debian/dbmail-pgsql.postinst, 
	  debian/dbmail-sieve.config, debian/dbmail-sieve.postinst, 
	  debian/dbmail-sieve.templates, debian/dbmail-sqlite.postinst, 
	  debian/dbmail.dirs, debian/dbmail.examples, debian/dbmail.init, 
	  debian/dbmail.postinst, debian/dbmail.preinst, debian/dbmail.prerm, 
	  debian/dbmail.templates, debian/po/cs.po, debian/po/de.po, 
	  debian/po/es.po, debian/po/fr.po, debian/po/it.po, debian/po/ja.po, 
	  debian/po/nl.po, debian/po/pt_BR.po, debian/po/templates.pot, 
	  debian/rules:
	cleanup in the debian packaging
	* dbmail.schema:
	cleanup dbmail ldap schema

2006-11-18  Paul J Stevens <paul@nfg.nl>

	* dbmail.conf:
	add missing directive
	* THANKS:
	update
	* INSTALL:
	update INSTALL
	* UPGRADING, dbmail.conf:
	updates and corrections
	* debian/changelog, debian/dbmail-sieve.config, debian/dbmail.config:
	debconf fixes

2006-11-17  Paul J Stevens <paul@nfg.nl>

	* sql/postgresql/create_tables.pgsql, 
	  sql/postgresql/migrate_from_2.0_to_2.2.pgsql:
	add index for lower(userid) in postgres schema
	* server.c, serverchild.c:
	simplify the non-blocking setup

2006-11-16  Aaron Stone  <aaron@serendipity.cx>

	* serverchild.c: